# Lazuli

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  build.bat  contributor_requirements.txt  index.html  pylintrc  pyproject.toml  requirements.txt  setup.bat  setup.py  sitemap.xml
.github/workflows/: docs.yml
CHANGELOG/: index.html
docs/: index.html  sitemap.xml
docs/CHANGELOG/: index.html
docs/reference/lazuli/: index.html
docs/reference/lazuli/account/: index.html
docs/reference/lazuli/character/: index.html
docs/reference/lazuli/database/: index.html
docs/reference/lazuli/inventory/: index.html
docs/reference/lazuli/utility/: index.html
docs/search/: search_index.json
lazuli/: __init__.py  account.py  character.py  database.py  inventory.py  jobs.py  jobs.yaml  utility.py
reference/lazuli/: index.html
reference/lazuli/account/: index.html
reference/lazuli/character/: index.html
reference/lazuli/database/: index.html
reference/lazuli/inventory/: index.html
reference/lazuli/utility/: index.html
search/: search_index.json
unit_test/SQLScripts/: create_tester_accounts.sql
unit_test/tests/: character_test.py  general_test.py  inventory_test.py  start_test.bat  user_test.py
